# vmc_jax

./: .gitignore  .readthedocs.yml  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: automatic_testing.yml
code/: operator.py  vqs.py
documentation/: Makefile  compile_jax_on_cluster.md  requirements.txt
documentation/readme/: installation_instructions.md
documentation/source/: conf.py  conf_readthedocs.py  examples.rst  index.rst  installation.rst  mpi.rst  nets.rst  operator.rst  parallelism.rst  sampler.rst  stats.rst  util.rst  vqs.rst
documentation/source/examples/: ex0_ground_state_search.rst  ex2_unitary_time_evolution.rst  ex3_custom_net.rst  ex4_benchmarking.rst  ex5_dissipative_Lindblad.rst  ex6_dissipative_Lindblad_2D.rst
documentation/source/util/: minsr.rst  output_manager.rst  stepper.rst  symmetries.rst  tdvp.rst
examples/: ex0_ground_state_search.ipynb  ex0_ground_state_search.py  ex1_custom_operator.py  ex2_unitary_time_evolution.py  ex3_custom_net.py  ex4_benchmarking.py  ex5_dissipative_Lindblad.py  ex5_dissipative_Lindblad_2D.py  ex6_dissipative_Lindblad.py  ex6_dissipative_Lindblad_2D.py  ex7_fermions.ipynb  ex7_infideltiy_minimisation.ipynb  ex8_fermions.ipynb
input/: example.txt
jVMC/: __init__.py  activation_functions.py  global_defs.py  mpi_wrapper.py  nets.py  operator.py  sampler.py  solver.py  stats.py  stepper.py  tdvp.py  util.py  version.py  vqs.py
jVMC/nets/: __init__.py  activation_functions.py  cnn.py  ffn.py  gpt.py  initializers.py  lstm.py  rbm.py  rnn.py  rnn1d_general.py  rnn2d.py  rnn2d_general.py  sym_wrapper.py  target.py  two_nets_wrapper.py
jVMC/operator/: Infidelity.py  __init__.py  base.py  branch_free.py  povm.py
jVMC/util/: Parameters2HDF5.py  __init__.py  minsr.py  output_manager.py  stepper.py  symmetries.py  tdvp.py  util.py
programs/: config_complexity.py  dissipative_Lindblad.py  dissipative_Lindblad_2D.py  example_main.py  excited_state_search.py  ground_state_search.py  quench_from_zpol.py
tests/: minsr_test.py  mpi_wrapper_t.py  mpi_wrapper_test.py  nets_t.py  nets_test.py  operator_t.py  operator_test.py  output_manager_test.py  povm_t.py  povm_test.py  sampler_t.py  sampler_test.py  stats_test.py  stepper_t.py  stepper_test.py  symmetries_t.py  symmetries_test.py  tdvp_t.py  tdvp_test.py  vqs_t.py  vqs_test.py
tests/benchmark/: net_evaluation.py  operator_evaluation.py
tests/data_ref/: fermion_ref.txt
